--- a/style.css
+++ b/style.css
@@ -3,13 +3,14 @@
     padding: 0;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: rgb(5, 5, 6);
-    background-color: aliceblue;
+    box-sizing: border-box;
+    background-color: #c6c4c4;
 }
 
 .detail {
-    /* height: 100vh; */
+    padding: 10px 10%;   
     width: 100%;
-    
+    height: 100vh;
 }
 
 .header {
@@ -22,16 +23,40 @@
     display: inline-block;
     padding: 0 20px;
     margin-right: 20px;
-    position: relative;
     font-size: 18px;
+    list-style: none;
  }
 .header h1{
     padding-left: 50px;
 }
-.header a {
-    transition: all 0.3s ease;
-}
 
+nav ul li a{
+        text-decoration: none;
+        font-size: 18px;
+        position: relative;
+        transition: all 0.3s ease;
+    }
+nav ul li a::after{
+        content: '';
+        width: 0;
+        height: 3px;
+        background: #ed5628;
+        position: absolute;
+        left: 0;
+        bottom: -6px;
+}
+nav ul li a:hover::after{
+        width: 100%;
+}  
+.box {
+    margin-top: 15%;
+    font-size: 30px;
+    text-align: center;
+}
+.box h2 {
+    font-size: 60px;
+    margin-top: 20px;
+}
 #info {
     width: 100%;
     text-align: center;
